--- a/About.cshtml
+++ b/About.cshtml
@@ -5,8 +5,9 @@
 <section id="main">
     <h1>A little bit about Fourth Coffee</h1>
     <p>
-        Fourth Coffee was founded in 2010 and delivers coffee and fresh baked goods right to your door. 
-        In another life, Bill Baker was a developer by day and pastry chef by night.  
+        Fourth Coffee was founded by Neha Chintawar 2022.
+        and delivers coffee and fresh baked goods right to your door. 
+        In another life, Arpit Chintawar was a developer by day and pastry chef by night.  
         But soon Bill's innate skills with all things involving butter, flour and sugar put him 
         even more in demand than his programming talents and what started out as a way to satisfy 
         his own sweet tooth became all-consuming.  Fourth Coffee is not only a candy-coated wonderland 
@@ -15,6 +16,9 @@
         order his all natural, locally-sourced confections and have them delivered to their 
         door within 24 hours.
     </p>
+    
+    <h1>A Welcome to Neha Chintawar Kitchen </h1>
+    <iframe src="https://giphy.com/embed/mr6ekP4GzTzxkCyJ2j" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/RosannaPansino-burn-burned-burnt-mr6ekP4GzTzxkCyJ2j">via GIPHY</a></p>
 </section>
 
 <div id="sidebar">
