--- a/About.cshtml
+++ b/About.cshtml
@@ -5,7 +5,7 @@
 <section id="main">
     <h1>A little bit about Fourth Coffee</h1>
     <p>
-        Fourth Coffee was founded by Neha  2022.
+        Fourth Coffee was founded by Neha  2022...
         and delivers coffee and fresh baked goods right to your door. 
         In another life, Arpit  was a developer by day and pastry chef by night.  
         But soon Bill's innate skills with all things involving butter, flour and sugar put him 
