--- a/About.cshtml
+++ b/About.cshtml
@@ -3,9 +3,9 @@
 }
 
 <section id="main">
-    <h1>A little bit about Fourth Coffee</h1>
+    <h1>A little bit about Ishan's world</h1>
     <p>
-        Fourth Coffee was founded by Neha  2022...
+        Ishani's world was founded by Neha  2021...
         and delivers coffee and fresh baked goods right to your door. 
         In another life, Arpit  was a developer by day and pastry chef by night.  
         But soon Bill's innate skills with all things involving butter, flour and sugar put him 
@@ -17,7 +17,7 @@
         door within 24 hours.
     </p>
     
-    <h1>A Welcome to Neha  Kitchen </h1>
+    <h1> LOOKS NEHA</h1>
     <iframe src="https://giphy.com/embed/mr6ekP4GzTzxkCyJ2j" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/RosannaPansino-burn-burned-burnt-mr6ekP4GzTzxkCyJ2j">via GIPHY</a></p>
 </section>
 
